--- a/frontend/app/src/locales/en.json
+++ b/frontend/app/src/locales/en.json
@@ -582,7 +582,7 @@
   },
   "date_time_picker": {
     "default_format": "Date should be in DD/MM/YYYY or DD/MM/YYYY HH:MM format",
-    "seconds_format": "Date should be in DD/MM/YYYY HH:MM:ss format"
+    "seconds_format": "Date should be in DD/MM/YYYY or DD/MM/YYYY HH:MM:ss format"
   },
   "module_address_selector": {
     "back": "Back",
